--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
     <!-- library dependencies -->
     <dependencies>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.0.0</version>
+    </dependency>
+    <dependencies>
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
