userDaoJdbc test first parameterization implemented.(at least it looks that way).

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
     <!-- library dependencies -->
     <dependencies>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.0.0-M4</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.0.0</version>
